fix: 🐛 [Modal 模态弹窗] overflow滚动问题

--- a/sparta/common/scss/reset.scss
+++ b/sparta/common/scss/reset.scss
@@ -13,6 +13,7 @@ body, html {
 
 *::-webkit-scrollbar {
   width: 10px;
+  height: 10px;
   background-color: $scrollbar-background;
   &-track {
     border-radius: 10px;
